// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`oppdaterRegisteropplysninger > Skal ikke vise alternativ for å se registeropplysninger 5 ekstra år tilbake i tid 1`] = `
<div>
  <div
    class="oppdater-registeropplysninger"
  >
    <span
      class="oppdater-registeropplysninger__oppdateringsknapp"
      role="button"
      tabindex="0"
    >
      <svg
        fill="none"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 7.45312L2.97548 11.3578L5.24725 7.74669"
          stroke="#0067C5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
        <path
          d="M17.0002 11.5004L15.0254 7.5957L12.7529 11.2059"
          stroke="#0067C5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
        <path
          d="M15.0003 7.62988C15.5914 11.7774 13.3891 15.843 10.3866 16.7839C8.29272 17.4416 6.19319 16.5581 4.76562 14.6904"
          stroke="#0067C5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
        <path
          d="M2.97953 11.3342C2.04814 6.73983 4.37591 2.23199 7.6138 1.21676C9.85084 0.513914 12.0907 1.56678 13.514 3.70168"
          stroke="#0067C5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      Oppdater registeropplysninger
    </span>
    <span
      class="oppdater-registeropplysninger__sistOppdatert"
    >
       (sist oppdatert 2020-08-23)
    </span>
  </div>
</div>
`;

exports[`oppdaterRegisteropplysninger > Skal vise alternativ for å se registeropplysninger 5 ekstra år tilbake i tid 1`] = `
<div>
  <div
    class="oppdater-registeropplysninger"
  >
    <div
      class="oppdater-registeropplysninger__checkbox navds-checkbox navds-checkbox--small"
    >
      <input
        aria-labelledby="aksel-id-2"
        class="navds-checkbox__input"
        id="123"
        name="inkluderSiste5Aar"
        type="checkbox"
        value="Inkl. siste 5 år"
      />
      <label
        class="navds-checkbox__label"
        for="123"
      >
        <span
          class="navds-checkbox__icon"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="0.625rem"
            role="img"
            viewBox="0 0 13 10"
            width="0.8125rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.03524 6.41478L10.4752 0.404669C11.0792 -0.160351 12.029 -0.130672 12.5955 0.47478C13.162 1.08027 13.1296 2.03007 12.5245 2.59621L5.02111 9.59934C4.74099 9.85904 4.37559 10 4.00025 10C3.60651 10 3.22717 9.84621 2.93914 9.56111L0.439143 7.06111C-0.146381 6.47558 -0.146381 5.52542 0.439143 4.93989C1.02467 4.35437 1.97483 4.35437 2.56036 4.93989L4.03524 6.41478Z"
              fill="currentColor"
            />
          </svg>
        </span>
        <span
          class="navds-checkbox__content"
        >
          <span
            aria-hidden="true"
            class="navds-checkbox__label-text navds-body-short navds-body-short--small"
            id="aksel-id-2"
          >
            Inkl. siste 5 år
          </span>
        </span>
      </label>
    </div>
    <span
      class="oppdater-registeropplysninger__oppdateringsknapp"
      role="button"
      tabindex="0"
    >
      <svg
        fill="none"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1 7.45312L2.97548 11.3578L5.24725 7.74669"
          stroke="#0067C5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
        <path
          d="M17.0002 11.5004L15.0254 7.5957L12.7529 11.2059"
          stroke="#0067C5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
        <path
          d="M15.0003 7.62988C15.5914 11.7774 13.3891 15.843 10.3866 16.7839C8.29272 17.4416 6.19319 16.5581 4.76562 14.6904"
          stroke="#0067C5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
        <path
          d="M2.97953 11.3342C2.04814 6.73983 4.37591 2.23199 7.6138 1.21676C9.85084 0.513914 12.0907 1.56678 13.514 3.70168"
          stroke="#0067C5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      Oppdater registeropplysninger
    </span>
    <span
      class="oppdater-registeropplysninger__sistOppdatert"
    >
       (sist oppdatert 2020-08-23)
    </span>
  </div>
</div>
`;
